Added Recent-Project Section

--- a/index.html
+++ b/index.html
@@ -201,6 +201,44 @@
             </div>
     </section>
 
+    <!-- Recent Project -->
+    <section id="Recent-Project">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="about-content">
+                        <h2>Recent Project: BlastOff</h2>
+                        <p>Our team participated in a Designathon where we developed the BlastOff App, an innovative
+                            solution
+                            for the emerging space tourism industry. The app is designed to streamline and enhance the
+                            journey
+                            for passengers embarking on space tourism adventures, with a focus on travel to Mars.</p>
+                        <p>The BlastOff App covers all aspects of the travelers' experience, from organizing travel
+                            details and
+                            booking space travel tickets to arranging accommodations, scheduling training sessions, and
+                            even
+                            securing spots for Martian exploration.</p>
+                        <p>Given the potential rise in visitors, the app efficiently manages the complexities of space
+                            travel
+                            logistics while prioritizing safety, accessibility, and convenience. Our challenge was to
+                            develop
+                            an app that comprehensively supports all stages of Mars space tourism, providing an engaging
+                            and
+                            user-friendly experience.</p>
+                    </div>
+                    <a href="#contact" class="btn btn-pill"
+                        style="margin-top: 25px; background-color: #5d5d5d; color: #ffffff; border-radius: 25px; padding: 10px 20px; text-align: center; text-decoration: none; transition: background-color 0.3s ease, color 0.3s ease, opacity 0.3s ease;">Read
+                        More <i class="icon ion-md-arrow-dropright-circle"></i></a>
+                </div>
+                <div class="col-lg-6">
+                    <div class="about-image">
+                        <img src="assets/images/Figma_designs/Iphone 14.png" alt="MarsSpace App" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Blog -->
     <section id="blog">
         <div class="container" style="text-align: center;">
@@ -283,7 +321,6 @@
             </ul>
         </div>
     </section>
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
