Added About section, Recent Project

--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
                         <p>As an SRMIST student, I'm mastering programming, web dev, and data science. When not coding,
                             you can find me exploring the stock market, diving into projects, and exploring fintech and
                             blockchain frontiers.</p>
+                        <a href="about-me.html" class="btn btn-pill"
+                            style="margin-top: 25px; background-color: #5d5d5d; color: #ffffff; border-radius: 25px; padding: 10px 20px; text-align: center; text-decoration: none; transition: background-color 0.3s ease, color 0.3s ease, opacity 0.3s ease;">Read
+                            More <i class="icon ion-md-arrow-dropright-circle"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -225,10 +228,10 @@
                             an app that comprehensively supports all stages of Mars space tourism, providing an engaging
                             and
                             user-friendly experience.</p>
+                        <a href="recent-project.html" class="btn btn-pill"
+                            style="margin-top: 25px; background-color: #5d5d5d; color: #ffffff; border-radius: 25px; padding: 10px 20px; text-align: center; text-decoration: none; transition: background-color 0.3s ease, color 0.3s ease, opacity 0.3s ease;">Read
+                            More <i class="icon ion-md-arrow-dropright-circle"></i></a>
                     </div>
-                    <a href="#contact" class="btn btn-pill"
-                        style="margin-top: 25px; background-color: #5d5d5d; color: #ffffff; border-radius: 25px; padding: 10px 20px; text-align: center; text-decoration: none; transition: background-color 0.3s ease, color 0.3s ease, opacity 0.3s ease;">Read
-                        More <i class="icon ion-md-arrow-dropright-circle"></i></a>
                 </div>
                 <div class="col-lg-6">
                     <div class="about-image">
