Updated Blog Page

--- a/about-me.html
+++ b/about-me.html
@@ -96,14 +96,14 @@
                             Technology (SRMIST), I find myself captivated by the intricate world of algorithms,
                             trading, and the art of crafting delightful user experiences.</p>
                         <h3
-                            style="font-family: 'Poppins', sans-serif; font-weight: 500; font-size: 28px; color: #A1A3BB">
+                            style="font-family: 'Poppins', sans-serif; font-weight: 500; font-size: 28px; color: #ffffff">
                             Education and Background</h3>
                         <p>As a dedicated student at SRMIST, I'm honing my skills in Computer Science and
                             Engineering. I believe in the power of education to shape one's perspective and to
                             unlock new realms of creativity. I thrive on challenges and am always seeking
                             opportunities to broaden my knowledge horizons.</p>
                         <h3
-                            style="font-family: 'Poppins', sans-serif; font-weight: 500; font-size: 28px; color: #A1A3BB">
+                            style="font-family: 'Poppins', sans-serif; font-weight: 500; font-size: 28px; color: #ffffff">
                             Algorithmic Trading and Development</h3>
                         <p>Beyond the classroom, I've delved deep into the world of algorithmic trading and
                             development. With a keen interest in the financial markets, I leverage my
@@ -112,7 +112,7 @@
                             and efficient trading systems. I also code in Pine Script, crafting intricate
                             technical indicators that empower traders to make informed decisions.</p>
                         <h3
-                            style="font-family: 'Poppins', sans-serif; font-weight: 500; font-size: 28px; color: #A1A3BB">
+                            style="font-family: 'Poppins', sans-serif; font-weight: 500; font-size: 28px; color: #ffffff">
                             UI/UX Design: Where Aesthetics Meet Functionality</h3>
                         <p>While algorithms and trading fuel my logical side, I'm equally passionate about
                             creating user-centric experiences through UI/UX design. The intersection of
@@ -121,7 +121,7 @@
                             ensuring seamless interactions, I'm committed to making technology intuitive and
                             visually appealing.</p>
                         <h3
-                            style="font-family: 'Poppins', sans-serif; font-weight: 500; font-size: 28px; color: #A1A3BB">
+                            style="font-family: 'Poppins', sans-serif; font-weight: 500; font-size: 28px; color: #ffffff">
                             Skills and Expertise</h3>
                         <p>My programming toolkit is diverse and comprehensive. I'm well-versed in HTML, CSS,
                             JavaScript, Python, Flask, MySQL, MsSQL, C++, C, Java, .NET, and C#. Additionally,
@@ -130,7 +130,7 @@
                             hands-on experience with small projects and basic web applications, reflecting my
                             dedication to continuous learning and practical application.</p>
                         <h3
-                            style="font-family: 'Poppins', sans-serif; font-weight: 500; font-size: 28px; color: #A1A3BB">
+                            style="font-family: 'Poppins', sans-serif; font-weight: 500; font-size: 28px; color: #ffffff">
                             Exploration and Certifications</h3>
                         <p>My thirst for knowledge has led me to explore various domains. I've acquired valuable
                             certifications along the way, including Networking Basics CISCO, Machine Learning
@@ -138,7 +138,7 @@
                             certifications are a testament to my commitment to staying updated with the latest
                             trends and technologies.</p>
                         <h3
-                            style="font-family: 'Poppins', sans-serif; font-weight: 500; font-size: 28px; color: #A1A3BB">
+                            style="font-family: 'Poppins', sans-serif; font-weight: 500; font-size: 28px; color: #ffffff">
                             Passions Beyond Tech</h3>
                         <p>Beyond the digital realm, I'm captivated by blockchain technology, the stock market,
                             and fintech innovations. I believe in the transformative potential of these fields
