--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         </a>
                         <p>Discover how simplicity can enhance user experiences and make your designs more effective.
                         </p>
-                        <a href="#" class="blog-link">Read More <i class="icon ion-md-arrow-dropright-circle"></i></a>
+                        <a href="blog-1.html" class="blog-link">Read More <i class="icon ion-md-arrow-dropright-circle"></i></a>
                     </div>
                 </div>
                 <!-- Technical Indicators Card -->
@@ -271,7 +271,7 @@
                         </a>
                         <p>Explore the world of technical indicators in algorithmic trading and how they can inform
                             strategies.</p>
-                        <a href="#" class="blog-link">Read More <i class="icon ion-md-arrow-dropright-circle"></i></a>
+                        <a href="blog-1.html" class="blog-link">Read More <i class="icon ion-md-arrow-dropright-circle"></i></a>
                     </div>
                 </div>
                 <!-- Software Development Card -->
@@ -282,7 +282,7 @@
                         </a>
                         <p>Learn about innovative approaches to software development that drive growth and excellence.
                         </p>
-                        <a href="#" class="blog-link">Read More <i class="icon ion-md-arrow-dropright-circle"></i></a>
+                        <a href="blog-1.html" class="blog-link">Read More <i class="icon ion-md-arrow-dropright-circle"></i></a>
                     </div>
                 </div>
             </div>
