--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:url" content="https://akashsasikumar.com/portfolio">
     <meta property="og:image:alt" content="Akash Sasikumar's Portfolio">
 
-    <link rel="canonical" href="https://themesbootstrap.com.mx/templates/personal-portfolio-template/index.html" />
+    <link rel="canonical" href="https://akashsasikumar47.github.io/Akash-Sasikumar-Portfolio/" />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
@@ -35,11 +35,15 @@
     <link href="https://unpkg.com/ionicons@4.2.0/dist/css/ionicons.min.css" rel="stylesheet">
 
     <!-- Favicon for Various Devices -->
-    <link rel="shortcut icon" href="assets/images/favicon.png" /> <!-- Standard Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+    <link rel="shortcut icon" href="assets/images/logo/favicon.png" /> <!-- Standard Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/logo/apple-touch-icon.png">
 
 
     <title>Akash Sasikumar - Portfolio</title>
+
+    <!-- Custom Additions -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-68929300-2"></script>
     <script>
@@ -57,7 +61,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar fixed-top navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="index.html"><img src="assets/images/logo.svg" class="header-logo"></a>
+            <a class="navbar-brand" href="index.html"><img src="assets/images/logo/logo.svg" class="header-logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="icon ion-md-menu"></i>
@@ -71,7 +75,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#call-to-action">Contact</a>
                     </li>
-
                 </ul>
             </div>
         </div>
@@ -79,7 +82,7 @@
 
     <!-- Hero Section -->
     <section id="hero"
-        style="background-image: url('assets/images/Figma_designs/Hero_bg_frame.svg'); background-size: cover;">
+        style="background-image: url('assets/images/Figma_designs/example.svg'); background-size: cover;">
         <div class="container text-center" style="margin-top: 100px;">
             <div class="profile-picture" style="margin-bottom: 25px;">
                 <img src="assets/images/Figma_designs/profile_picture.png" alt="Profile Picture" width="100"
@@ -89,13 +92,13 @@
                 <p
                     style="background-image: linear-gradient(90deg, #9166FF, #9580F8); -webkit-background-clip: text; color: transparent; font-size: 24px; font-weight: bold;">
                     Hi, I'm Akash Sasikumar</p>
-                <h1>CRAFTING CODE & DESIGNING EXPERIENCES</h1>
-                <h2>A Computer Science Engineer by training, a dedicated UI/UX Designer at heart, an Algorithmic Trader
-                    in practice, and a Software Developer crafting innovative Web Applications.</h2>>
-                <a href="#contact" class="btn btn-pill"
-                    style="margin-top: 25px; background-color: #6044D8; color: #ffffff; border-radius: 25px; padding: 10px 20px; text-align: center; text-decoration: none; transition: background-color 0.3s ease, color 0.3s ease, opacity 0.3s ease;">Get
-                    in touch</a>
-
+                <h1 class="animated-heading">CRAFTING CODE & DESIGNING EXPERIENCES</h1>
+                <h2 class="animated-subheading">A Computer Science Engineer by training, a dedicated UI/UX Designer at
+                    heart, an Algorithmic Trader
+                    in practice, and a Software Developer crafting innovative Web Applications.</h2>
+                <a href="#contact" class="btn btn-pill btn-animated-gsap">
+                    Get in touch
+                </a>
             </div>
         </div>
     </section>
@@ -104,7 +107,7 @@
     <section id="TechStack">
         <div class="tech-stack-container">
             <div class="tech-stack">
-                <span>Software Developement</span>
+                <span>Software Development</span>
                 <span>UI/UX Design</span>
                 <span>Algorithmic Trading</span>
                 <span>Data Science & Applications</span>
@@ -114,21 +117,23 @@
     </section>
 
     <!-- About Me -->
-    <section id="About">
+    <section id="About" class="about-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
                     <div class="about-content">
                         <h2>About Me</h2>
-                        <p>I'm Akash Sasikumar, a Computer Science enthusiast with a fiery passion for crafting
-                            immersive UI/UX experiences. From coding depths to financial algorithms, I'm on a journey to
-                            blend creativity and technology seamlessly.</p>
-                        <p>As an SRMIST student, I'm mastering programming, web dev, and data science. When not coding,
-                            you can find me exploring the stock market, diving into projects, and exploring fintech and
-                            blockchain frontiers.</p>
-                        <a href="about-me.html" class="btn btn-pill"
-                            style="margin-top: 25px; background-color: #5d5d5d; color: #ffffff; border-radius: 25px; padding: 10px 20px; text-align: center; text-decoration: none; transition: background-color 0.3s ease, color 0.3s ease, opacity 0.3s ease;">Read
-                            More <i class="icon ion-md-arrow-dropright-circle"></i></a>
+                        <p>I'm Akash Sasikumar, a <span class="highlight-text">Computer Science enthusiast</span> with a
+                            fiery passion for crafting immersive <span class="highlight-text">UI/UX experiences</span>.
+                            From coding depths to financial algorithms, I'm on a journey to blend creativity and
+                            technology
+                            seamlessly.</p>
+                        <p>As an <span class="highlight-text">SRMIST student</span>, I'm mastering programming, web dev,
+                            and data science. When not coding, you can find me exploring the stock market, diving into
+                            projects, and exploring fintech and blockchain frontiers.</p>
+                        <a href="about-me.html" class="btn btn-pill read-more-btn">
+                            Read More <i class="icon ion-md-arrow-dropright-circle"></i>
+                        </a>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -260,7 +265,8 @@
                         </a>
                         <p>Discover how simplicity can enhance user experiences and make your designs more effective.
                         </p>
-                        <a href="blog-1.html" class="blog-link">Read More <i class="icon ion-md-arrow-dropright-circle"></i></a>
+                        <a href="blog-1.html" class="blog-link">Read More <i
+                                class="icon ion-md-arrow-dropright-circle"></i></a>
                     </div>
                 </div>
                 <!-- Technical Indicators Card -->
@@ -271,7 +277,8 @@
                         </a>
                         <p>Explore the world of technical indicators in algorithmic trading and how they can inform
                             strategies.</p>
-                        <a href="blog-1.html" class="blog-link">Read More <i class="icon ion-md-arrow-dropright-circle"></i></a>
+                        <a href="blog-1.html" class="blog-link">Read More <i
+                                class="icon ion-md-arrow-dropright-circle"></i></a>
                     </div>
                 </div>
                 <!-- Software Development Card -->
@@ -282,7 +289,8 @@
                         </a>
                         <p>Learn about innovative approaches to software development that drive growth and excellence.
                         </p>
-                        <a href="blog-1.html" class="blog-link">Read More <i class="icon ion-md-arrow-dropright-circle"></i></a>
+                        <a href="blog-1.html" class="blog-link">Read More <i
+                                class="icon ion-md-arrow-dropright-circle"></i></a>
                     </div>
                 </div>
             </div>
@@ -326,6 +334,7 @@
     </section>
 
     <!-- Optional JavaScript -->
+    <script src="assets/js/animations.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
