--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <!-- Hero Section -->
     <section id="hero"
-        style="background-image: url('assets/images/Figma_designs/example.svg'); background-size: cover;">
+        style="background-image: url('assets/images/Figma_designs/Hero_bg_frame.svg'); background-size: cover; background-position: center center;">
         <div class="container text-center" style="margin-top: 100px;">
             <div class="profile-picture" style="margin-bottom: 25px;">
                 <img src="assets/images/Figma_designs/profile_picture.png" alt="Profile Picture" width="100"
