--- a/index.html
+++ b/index.html
@@ -89,16 +89,14 @@
                     height="100" style="border-radius: 50%;">
             </div>
             <div class="hero-text">
-                <p
-                    style="background-image: linear-gradient(90deg, #9166FF, #9580F8); -webkit-background-clip: text; color: transparent; font-size: 24px; font-weight: bold;">
-                    Hi, I'm Akash Sasikumar</p>
+                <p class="pop-text">
+                    Hi, I'm Akash Sasikumar
+                </p>
                 <h1 class="animated-heading">CRAFTING CODE & DESIGNING EXPERIENCES</h1>
                 <h2 class="animated-subheading">A Computer Science Engineer by training, a dedicated UI/UX Designer at
                     heart, an Algorithmic Trader
                     in practice, and a Software Developer crafting innovative Web Applications.</h2>
-                <a href="#call-to-action" class="btn btn-pill btn-animated-gsap">
-                    Get in touch
-                </a>
+                <a href="#call-to-action" class="btn-animated-gsap primary-btn">Get in touch</a>
             </div>
         </div>
     </section>
@@ -118,28 +116,55 @@
 
     <!-- About Me -->
     <section id="About" class="about-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="about-content">
-                        <h2>About Me</h2>
-                        <p>I'm Akash Sasikumar, a <span class="highlight-text">Computer Science enthusiast</span> with a
-                            fiery passion for crafting immersive <span class="highlight-text">UI/UX experiences</span>.
-                            From coding depths to financial algorithms, I'm on a journey to blend creativity and
-                            technology
-                            seamlessly.</p>
-                        <p>As an <span class="highlight-text">SRMIST student</span>, I'm mastering programming, web dev,
-                            and data science. When not coding, you can find me exploring the stock market, diving into
-                            projects, and exploring fintech and blockchain frontiers.</p>
-                        <a href="about-me.html" class="btn btn-pill read-more-btn">
-                            Read More <i class="icon ion-md-arrow-dropright-circle"></i>
-                        </a>
-                    </div>
+        <div class="row">
+            <div class="about-content">
+                <h2>About Me</h2>
+                <p>I'm Akash Sasikumar, a <span class="highlight-text">Computer Science enthusiast</span> with a
+                    fiery passion for crafting immersive <span class="highlight-text">UI/UX experiences</span>.
+                    From coding depths to financial algorithms, I'm on a journey to blend creativity and
+                    technology
+                    seamlessly.</p>
+                <p>As an <span class="highlight-text">SRMIST student</span>, I'm mastering programming, web dev,
+                    and data science. When not coding, you can find me exploring the stock market, diving into
+                    projects, and exploring fintech and blockchain frontiers.</p>
+                <a href="about-me.html" class="secondary-btn">
+                    Read More <i class="icon ion-md-arrow-dropright-circle"></i>
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Project Portfolio -->
+    <section id="portfolio">
+        <div class="container" style="text-align: center;">
+            <div class="heading-content">
+                <h2 style="font-size: 36px; font-weight: 600; color: #ffffff;">
+                    Featured Works
+                </h2>
+            </div>
+            
+            <div class="card-container">
+                <div class="card">
+                    <h3>Project 1</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <a href="#" class="btn">Learn More</a>
                 </div>
-                <div class="col-lg-6">
-                    <div class="about-image">
-                        <img src="assets/images/Figma_designs/About_image.png" alt="About Me" class="img-fluid">
-                    </div>
+                <div class="card">
+                    <h3>Project 2</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <a href="#" class="btn">Learn More</a>
+                </div>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <h3>Project 3</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <a href="#" class="btn">Learn More</a>
+                </div>
+                <div class="card">
+                    <h3>Project 4</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <a href="#" class="btn">Learn More</a>
                 </div>
             </div>
         </div>
@@ -309,7 +334,7 @@
                 <a href="#" class="btn btn-pill open-modal"
                     style="margin-top: 15px; background-color: #6044D8; color: #ffffff; border-radius: 25px; padding: 10px 20px; text-align: center; text-decoration: none; transition: background-color 0.3s ease, color 0.3s ease, opacity 0.3s ease;">Contact
                     Me</a>
-                <a href="assets/files/AKASH - Resume.pdf" class="btn btn-pill"
+                <a href="assets/files/Resume - AKASH S.pdf" class="btn btn-pill"
                     style="margin-top: 15px; background-color: #5d5d5d; color: #ffffff; border-radius: 25px; padding: 10px 20px; text-align: center; text-decoration: none; transition: background-color 0.3s ease, color 0.3s ease, opacity 0.3s ease;"
                     download>Download Resume</a>
             </div>
